Fix link overflow bug

--- a/dark.css
+++ b/dark.css
@@ -637,6 +637,7 @@ strong {
 				color: transparent;
 				background-image: linear-gradient(to right, #d754ad, #f96785, #fe7333);
 				-webkit-background-clip: text;
+				display: inline-block;
 				/*-webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
 				animation: sk-rotateplane 1.2s infinite ease-in-out;*/
 			}
